2004-04-17 Henrik Brix Andersen <brix@gimp.org>
* app/tools/gimphuesaturationtool.c
(gimp_hue_saturation_tool_dialog): resolved conflicting
mnemonic. Fixes bug #139868.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12992 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-04-17  Henrik Brix Andersen  <brix@gimp.org>
 
+	* app/tools/gimphuesaturationtool.c
+	(gimp_hue_saturation_tool_dialog): resolved conflicting
+	mnemonic. Fixes bug #139868.
+
+2004-04-17  Henrik Brix Andersen  <brix@gimp.org>
+
 	* plug-ins/common/jpeg.c (save_dialog): live preview doesn't
 	modify the undo history of the image anymore, label changed
 	accordingly. Fixes bug #140296.
