--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-17  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpwidgets-constructors.[ch]:
+	s/GtkSignalFunc/GCallback/
+
 2004-04-17  Henrik Brix Andersen  <brix@gimp.org>
 
 	* app/tools/gimphuesaturationtool.c
