--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-18  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/winicon/icodialog.c
+	* plug-ins/winicon/icosave.c: ported GtkOptionMenu to GtkComboBox.
+
 2004-04-17  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpwidgets-constructors.[ch]:
