2004-04-18  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/script-fu-scripts.c: use a GtkComboBox for
	SF-OPTION.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12997 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-18  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu-scripts.c: use a GtkComboBox for
+	SF-OPTION.
+
+2004-04-18  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/winicon/icodialog.c
 	* plug-ins/winicon/icosave.c: ported GtkOptionMenu to GtkComboBox.
 
