--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-18  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/print/gimp_main_window.c: replaced wrong use of
+	gimp_option_menu with gimp_int_option_menu.
+
+2004-04-18  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/script-fu-scripts.c: use a GtkComboBox for
 	SF-OPTION.
 
