2004-04-18  Pedro Gimeno  <pggimeno@wanadoo.es>
	* plug-ins/common/gauss_rle.c (gauss_rle): Oops, fixed my fix.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13003 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-04-18  Pedro Gimeno  <pggimeno@wanadoo.es>
 
+	* plug-ins/common/gauss_rle.c (gauss_rle): Oops, fixed my fix.
+
+2004-04-18  Pedro Gimeno  <pggimeno@wanadoo.es>
+
 	* plug-ins/common/gauss_iir.c: Change tabs to spaces all over the
 	file, in preparation for other changes. Minor cleanup.
 
