--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-04-19  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpenumstore.[ch]: avoid unnecessary casts.
+	
+	* app/widgets/gimpenumcombobox.[ch]: added an API that inserts a
+	GtkTreeModelFilter to make items invisible. This is a kludge to
+	workaround bug #.
+ 
+	* app/tools/gimpcurvestool.c
+	* app/tools/gimplevelstool.c
+	* app/widgets/gimphistogrameditor.c
+
 2004-04-18  Henrik Brix Andersen  <brix@gimp.org>
 
 	* app/widgets/gimptemplateeditor.c
