--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-04-19  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimppropwidgets.[ch]
+	* app/gui/preferences-dialog.c: replaced
+	gimp_prop_boolean_option_menu_new() with
+	gimp_prop_boolean_combo_box_new().
+
+2004-04-19  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpenumstore.[ch]: avoid unnecessary casts.
 	
 	* app/widgets/gimpenumcombobox.[ch]: added an API that inserts a
