actually insert the bug number
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13010 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,7 +11,7 @@
 	
 	* app/widgets/gimpenumcombobox.[ch]: added an API that inserts a
 	GtkTreeModelFilter to make items invisible. This is a kludge to
-	workaround bug #.
+	workaround bug #135875.
  
 	* app/tools/gimpcurvestool.c
 	* app/tools/gimplevelstool.c
