... and complete the ChangeLog entry (doh!)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13011 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,7 +15,8 @@
  
 	* app/tools/gimpcurvestool.c
 	* app/tools/gimplevelstool.c
-	* app/widgets/gimphistogrameditor.c
+	* app/widgets/gimphistogrameditor.c: use the new function to hide
+	channels that are not available.
 
 2004-04-18  Henrik Brix Andersen  <brix@gimp.org>
 
