2004-04-19  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpdrawabletreeview.c: removed unused includes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13012 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-04-19  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpdrawabletreeview.c: removed unused includes.
+
+2004-04-19  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimppropwidgets.[ch]
 	* app/gui/preferences-dialog.c: replaced
 	gimp_prop_boolean_option_menu_new() with
