--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-19  Henrik Brix Andersen  <brix@gimp.org>
+
+	* plug-ins/script-fu/scripts/gimp-headers.scm
+	* plug-ins/script-fu/scripts/gimp-labels.scm: applied a patch from
+	William Skaggs which changes the sub menu title for the gimp web
+	theme to classic.gimp.org. Fixes bug #137036.
+
 2004-04-19  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpdrawabletreeview.c: removed unused includes.
