2004-04-19  Michael Natterer  <mitch@gimp.org>
	* menus/toolbox-menu.xml: added the toolbox menu.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13016 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-04-19  Michael Natterer  <mitch@gimp.org>
 
+	* menus/toolbox-menu.xml: added the toolbox menu.
+
+2004-04-19  Michael Natterer  <mitch@gimp.org>
+
 	More GtkAction stuff (still unused):
 
 	* configure.in: added new directories menus/ and app/actions/
