2004-04-19  Michael Natterer  <mitch@gimp.org>
	* menus/Makefile.am
	* menus/toolbox-menu.xml: added the toolbox menu.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13017 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2004-04-19  Michael Natterer  <mitch@gimp.org>
 
+	* menus/Makefile.am
 	* menus/toolbox-menu.xml: added the toolbox menu.
 
 2004-04-19  Michael Natterer  <mitch@gimp.org>
