2004-04-19  Michael Natterer  <mitch@gimp.org>
	* app/actions/Makefile.am
	* app/actions/actions-types.h: oops, forgot to commit this one.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13018 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-19  Michael Natterer  <mitch@gimp.org>
 
+	* app/actions/Makefile.am
+	* app/actions/actions-types.h: oops, forgot to commit this one.
+
+2004-04-19  Michael Natterer  <mitch@gimp.org>
+
 	* menus/Makefile.am
 	* menus/toolbox-menu.xml: added the toolbox menu.
 
