--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-19  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpactiongroup.c
+	* app/widgets/gimpenumcombobox.c
+	* app/widgets/gimpenumstore.c: fixed inline docs.
+
+	* app/widgets/gimpenumaction.c: fixed property declaration.
+
 2004-04-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/colormap-editor-commands.[ch]
