--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-19  Sven Neumann  <sven@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt
+	* app/app.types: updated, added new stuff, still incomplete...
+
 2004-03-23  Sven Neumann  <sven@gimp.org>
 
 	* app/app-docs.sgml
