2004-04-19  Sven Neumann  <sven@gimp.org>
	* app/app-sections.txt: more updates (everything but the new actions).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13026 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,5 +1,9 @@
 2004-04-19  Sven Neumann  <sven@gimp.org>
 
+	* app/app-sections.txt: more updates (everything but the new actions).
+
+2004-04-19  Sven Neumann  <sven@gimp.org>
+
 	* app/Makefile.am
 	* app/app-docs.sgml
 	* app/app-sections.txt: merged update from stable branch.
