2004-04-19  Michael Natterer  <mitch@gimp.org>
	* menus/Makefile.am
	* menus/image-menu.xml
	* menus/tool-options-menu.xml: more menus.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13027 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-19  Michael Natterer  <mitch@gimp.org>
+
+	* menus/Makefile.am
+	* menus/image-menu.xml
+	* menus/tool-options-menu.xml: more menus.
+
 2004-04-19  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpactiongroup.c
