2004-04-19  Sven Neumann  <sven@gimp.org>
	* configure.in: set gimp_plugin_version, gimp_sysconf_version and
	gimp_data_version to 2.1 so that the development version is
	clearly separated from stable gimp 2.0.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13028 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-19  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: set gimp_plugin_version, gimp_sysconf_version and
+	gimp_data_version to 2.1 so that the development version is
+	clearly separated from stable gimp 2.0.
+
 2004-04-19  Michael Natterer  <mitch@gimp.org>
 
 	* menus/Makefile.am
