2004-04-20  Sven Neumann  <sven@gimp.org>
	* plug-ins/gfig/gfig.c: removed unused return locations for menu
	item pointers.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13029 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-20  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/gfig/gfig.c: removed unused return locations for menu
+	item pointers.
+
 2004-04-19  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: set gimp_plugin_version, gimp_sysconf_version and
