2004-04-20  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpintcombobox.[ch]: added new widget
	GimpIntComboBox, a GtkComboBox with a simple list store to hold a
	label and an associated integer value. This is going to replace
	gimp_int_option_menu.

	* plug-ins/common/jpeg.c
	* plug-ins/print/gimp_main_window.c: ported these two plug-ins to
	the newly added widget.

2004-04-20  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/libgimpwidgets.types
	* libgimpwidgets/tmpl/gimpintcombobox.sgml: added docs for the new
	GimpIntComboBox widget.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13030 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2004-04-20  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/Makefile.am
+	* libgimpwidgets/gimpwidgets.h
+	* libgimpwidgets/gimpwidgetstypes.h
+	* libgimpwidgets/gimpintcombobox.[ch]: added new widget
+	GimpIntComboBox, a GtkComboBox with a simple list store to hold a
+	label and an associated integer value. This is going to replace
+	gimp_int_option_menu.
+
+	* plug-ins/common/jpeg.c
+	* plug-ins/print/gimp_main_window.c: ported these two plug-ins to
+	the newly added widget.
+
+2004-04-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/gfig/gfig.c: removed unused return locations for menu
 	item pointers.
 
