--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-04-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/align_layers.c
+	* plug-ins/common/borderaverage.c
+	* plug-ins/common/channel_mixer.c
+	* plug-ins/common/gif.c
+	* plug-ins/common/mng.c
+	* plug-ins/flame/flame.c
+	* plug-ins/gfig/gfig.c: ported remaining plug-ins to GimpIntComboBox.
+
+2004-04-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/iwarp.c (iwarp_get_pixel): check tile != NULL
 	before unrefing it. Fixes bug #140554; merged from stable branch.
 
