2004-04-20  Michael Natterer  <mitch@gimp.org>
	* app/gui/convert-dialog.[ch]: renamed convert_to_indexed()
	to convert_dialog_new() and return the dialog. Removed
	convert_to_rgb() and convert_to_grayscale().

	* app/gui/offset-dialog.[ch]: renamed offset_dialog_create()
	to offset_dialog_new() and return the dialog.

	* app/Makefile.am
	* app/actions/drawable-commands.c
	* app/actions/image-commands.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13037 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2004-04-20  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/convert-dialog.[ch]: renamed convert_to_indexed()
+	to convert_dialog_new() and return the dialog. Removed
+	convert_to_rgb() and convert_to_grayscale().
+
+	* app/gui/offset-dialog.[ch]: renamed offset_dialog_create()
+	to offset_dialog_new() and return the dialog.
+
+	* app/Makefile.am
+	* app/actions/drawable-commands.c
+	* app/actions/image-commands.c: changed accordingly.
+
+2004-04-20  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/*-commands.[ch]: removed...
 
 	* app/actions/*-commands.[ch]: ...and added here.
