--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -2,6 +2,13 @@
 
 	* libgimpwidgets/libgimpwidgets-docs.sgml
 	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpoldwidgets.sgml
+	* libgimpwidgets/tmpl/gimpwidgets.sgml
+
+2004-04-20  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-docs.sgml
+	* libgimpwidgets/libgimpwidgets-sections.txt
 	* libgimpwidgets/libgimpwidgets.types
 	* libgimpwidgets/tmpl/gimpintcombobox.sgml: added docs for the new
 	GimpIntComboBox widget.
