2004-04-20 Updated ja.po. T.Aihana <aihana@gnome.gr.jp>
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13039 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-20  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation by
+		Ryoichi INAGAKI <inagaki@ryo1.net>
+
 2004-04-16  Maxim Dziumanenko <mvd@mylinux.com.ua>
 
 	* Makefile.am (tips_POFILES): added uk.po (Ukraininan).
