--- a/tips/ja.po
+++ b/tips/ja.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: gimp-tips HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-20 22:57+0100\n"
-"PO-Revision-Date: 2004-03-22 12:50+0900\n"
+"PO-Revision-Date: 2004-04-18 19:21+0900\n"
 "Last-Translator: Ryoichi INAGAKI <ryo1@bc.wakwak.com>\n"
 "Language-Team: Japanese <translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -61,8 +61,8 @@ msgid ""
 "but that one. <tt>Shift</tt>-click again to show all layers."
 msgstr ""
 "レイヤーダイアログで「目」のアイコンを <tt>Shift</tt> を押しながらクリックす"
-"ることで、それ以外のレイヤー全部を隠すことができるんだ。もう一回同じ事をすれ"
-"ば全部のレイヤーが表示されるようになるよ。"
+"ることで、それ以外のレイヤー全部を隠すことができるんだ．もう一回同じ事をすれ"
+"ば全部のレイヤーが表示されるようになるよ．"
 
 #: tips/gimp-tips.xml.in.h:7
 msgid ""
@@ -106,7 +106,7 @@ msgid ""
 "with the Curves tool (Layer-&gt;Colors-&gt;Curves)."
 msgstr ""
 "スキャンした画像の色が減っちゃうときには，レベルツール (画像->色->レベル) で"
-"\"自動\"ボタンを使ってトーンを簡単に改善することができるよ。カラーキャストが"
+"\"自動\"ボタンを使ってトーンを簡単に改善することができるよ．カラーキャストが"
 "あれば，カーブツール (レイヤー->色->カーブ) で修正することができるよ．"
 
 #: tips/gimp-tips.xml.in.h:11
@@ -194,8 +194,8 @@ msgid ""
 "it's completed."
 msgstr ""
 "ファイル選択ダイアログではいくつかの shell のように <tt>Tab</tt> キーを使って"
-"の補間ができるよ．ファイル名の一部分を打った後で，<tt>Tab</tt>キーを押せば‥‥"
-"ほらね，補間されるでしょ?"
+"の補完ができるよ．ファイル名の一部分を打った後で，<tt>Tab</tt>キーを押せば‥‥"
+"ほらね，補完されるでしょ?"
 
 #: tips/gimp-tips.xml.in.h:20
 msgid ""
@@ -230,7 +230,7 @@ msgid ""
 msgstr ""
 "描画ツール (絵筆，エアブラシ，鉛筆) を使っているときに <tt>Shift</tt> を押し"
 "ながらクリックするとカーソルのところまで直線が引かれるよ．さらに <tt>Ctrl</"
-"tt> を押してやれば，直線が15度単位になるんだ．。"
+"tt> を押してやれば，直線が15度単位になるんだ．"
 
 #: tips/gimp-tips.xml.in.h:23
 msgid ""
@@ -312,8 +312,8 @@ msgid ""
 "You can perform many layer operations by right-clicking on the text label of "
 "a layer in the Layers dialog."
 msgstr ""
-"各レイヤーに関する操作はレイヤーダイアログ内のそれぞれのレイヤー名の上で右ク"
-"リックすると行えるんだ．"
+"レイヤーダイアログ内のそれぞれのレイヤー名の上で右クリックをすることで，"
+"レイヤーに対するいろんな操作が行えるんだ．"
 
 #: tips/gimp-tips.xml.in.h:32
 msgid ""
@@ -365,8 +365,8 @@ msgstr ""
 
 #~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
 #~ msgstr ""
-#~ "<tt>Alt</tt> を押しながらドラッグすることで、選択領域を置き換えたり調節し"
-#~ "たりできるんだ。"
+#~ "<tt>Alt</tt> を押しながらドラッグすることで，選択領域を置き換えたり調節し"
+#~ "たりできるんだ．"
 
 #~ msgid ""
 #~ "If your fonts turn out blocky, that's because they're not scalable fonts. "
@@ -374,7 +374,7 @@ msgstr ""
 #~ "install them. Some font servers allow you to use TrueType (<tt>.ttf</tt>) "
 #~ "fonts, which are also scalable."
 #~ msgstr ""
-#~ "文字がガタガタになっちゃうのはスケラーブルフォントじゃないからだよ。ほとん"
-#~ "どの X サーバは Type 1 Postscript フォントをサポートしてるはずだから、手に"
-#~ "いれてインストールしよう。いくつかのフォントサーバはスケラーブルな "
-#~ "TrueType (<tt>.ttf</tt>) フォントを使えるよ。"
+#~ "文字がガタガタになっちゃうのはスケラーブルフォントじゃないからだよ．ほとん"
+#~ "どの X サーバは Type 1 Postscript フォントをサポートしてるはずだから，手に"
+#~ "いれてインストールしよう．いくつかのフォントサーバはスケラーブルな "
+#~ "TrueType (<tt>.ttf</tt>) フォントを使えるよ．"
