2004-04-20  Sven Neumann  <sven@gimp.org>
	* modules/cdisplay_colorblind.c: ported to GimpIntComboBox.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13040 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2004-04-20  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpmemsizeentry.c
+	* modules/cdisplay_colorblind.c
 	* modules/cdisplay_proof.c: ported to GimpIntComboBox.
 
 	* libgimpwidgets/gimpwidgets.[ch]: declared the gimp option_menu
