--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,30 @@
 2004-04-20  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/Makefile.am
+	* libgimpwidgets/gimpwidgets.h
+	* libgimpwidgets/gimpwidgetstypes.h
+	* libgimpwidgets/gimpintstore.[ch]: added a GimpIntStore, derived
+	from GtkListStore, to be used by GimpIntComboBox and also by the
+	image and drawable menus.
+
+	* libgimpwidgets/gimpintcombobox.c: use the new GimpIntStore.
+
+	* app/widgets/gimpenumstore.[ch]: derive from GimpIntStore,
+	removed API that is provided by the parent class.
+
+	* app/widgets/gimpenumcombobox.[ch]: derive from GimpIntComboBox,
+	removed API that is provided by the parent class.
+
+	* app/gui/resize-dialog.c
+	* app/tools/gimpcurvestool.c
+	* app/tools/gimplevelstool.c
+	* app/widgets/gimpcolorframe.c
+	* app/widgets/gimphistogrameditor.c
+	* app/widgets/gimppropwidgets.c
+	* app/widgets/gimpstrokeeditor.c: changed accordingly.
+
+2004-04-20  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpenumstore.[ch]
 	* app/widgets/gimpenumcombobox.c: let the pixbuf renderer take care
 	of rendering the pixbuf from the stock_id.
