2004-04-20  Sven Neumann  <sven@gimp.org>
	* tools/pdbgen/pdb/fileops.pdb (file_load_thumbnail): removed
	color cast. Merged from stable branch.

	* app/pdb/fileops_cmds.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13047 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-04-20  Sven Neumann  <sven@gimp.org>
 
+	* tools/pdbgen/pdb/fileops.pdb (file_load_thumbnail): removed
+	color cast. Merged from stable branch.
+
+	* app/pdb/fileops_cmds.c: regenerated.
+
+2004-04-20  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/Makefile.am
 	* libgimpwidgets/gimpwidgets.h
 	* libgimpwidgets/gimpwidgetstypes.h
