2004-04-21  Sven Neumann  <sven@gimp.org>
	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/MapObject/mapobject_ui.c: ported to the new API.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13049 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-21  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/Lighting/lighting_ui.c
+	* plug-ins/MapObject/mapobject_ui.c: ported to the new API.
+
+2004-04-21  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/Makefile.am
 	* libgimp/gimpui.h
 	* libgimp/gimppixbuf.[ch]: new file that holds pixbuf accessors
