2004-04-21  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpintcombobox.[ch]: added new functions
	gimp_int_combo_box_[prepend|append}.

	* plug-ins/common/sample_colorize.c: ported to GimpDrawableComboBox.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13052 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-21  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt	
+	* libgimpwidgets/tmpl/gimpintcombobox.sgml: added new functions
+	gimp_int_combo_box_[prepend|append}.
+
 2004-04-20  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-docs.sgml
