--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-21  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpintcombobox.[ch]: added new functions
+	gimp_int_combo_box_[prepend|append}.
+
+	* plug-ins/common/sample_colorize.c: ported to GimpDrawableComboBox.
+
 2004-04-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/actions/qmask-actions.c
