2004-04-21  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpdrawablecombobox.c
	* libgimp/gimpimagecombobox.c
	* libgimp/gimppixbuf.c
	* libgimpwidgets/gimpintcombobox.c
	* libgimpwidgets/gimpintstore.c: API documentation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13054 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-04-21  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpdrawablecombobox.c
+	* libgimp/gimpimagecombobox.c
+	* libgimp/gimppixbuf.c
+	* libgimpwidgets/gimpintcombobox.c
+	* libgimpwidgets/gimpintstore.c: API documentation.
+
+2004-04-21  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpintcombobox.[ch]: added new functions
 	gimp_int_combo_box_[prepend|append].
 
