--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-21  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added new files.
+	* de.po: updated.
+
 2004-04-15  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* pa.po: Added Punjabi translation by
